5764
When fixing this bug, please have a look also at: 
{code}
object Foo {
  object X { def unapply(x : Int)(y: Int) = Some((2,2)) }
  42 match { case _ X _ => () }
}
{code}
which is related and currently gives this error message:
{code}
t4425_03.scala:3: error: error during expansion of this match (this is a scalac bug).
The underlying error was: value _1 is not a member of object Foo.X
  42 match { case _ X _ => () }
     ^
one error found
{code}
